crates/rome_formatter/tests/specs/prettier/js/line-suffix-boundary/boundary.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: boundary.js

---
# Input
```js
`${
a +  // a
  a
}

${a // comment
}

${b /* comment */}

${/* comment */ c /* comment */}

${// comment
d //comment
}

${// $FlowFixMe found when converting React.createClass to ES6
ExampleStory.getFragment('story')}
`;

<div>
{ExampleStory.getFragment('story') // $FlowFixMe found when converting React.createClass to ES6
}
</div>;

```

# Output
```js
`${a + a}

${a}

${b}

${c}

${d}

${ExampleStory.getFragment("story")}
`; // a // comment /* comment */ /* comment */ /* comment */ // comment //comment // $FlowFixMe found when converting React.createClass to ES6

<div>
{ExampleStory.getFragment('story') // $FlowFixMe found when converting React.createClass to ES6
}
</div>;

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ boundary.js:21:1
   │  
21 │ ┌ <div>
22 │ │ {ExampleStory.getFragment('story') // $FlowFixMe found when converting React.createClass to ES6
23 │ │ }
   │ └─^ TypeScript only syntax

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ boundary.js:24:2
   │
24 │ </div>;
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ';'
   ┌─ boundary.js:24:7
   │
24 │ </div>;
   │       ^ Expected an expression here


```


